tests/ui/parser/doc-comment-in-if-statement.rs
fn main() {
    if true /*!*/ {}
    //~^ ERROR outer attributes are not allowed on
    //~| ERROR expected outer doc comment
}

// ferrocene-annotations: fls_q8l2jza7d9xa
// Comments
